// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CampaignTeaser renders correctly: default CampaignTeaser with maximum configuration 1`] = `
.c9 {
  margin: 0;
  font-size: 12px;
  line-height: 16px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c16 {
  margin: 0;
  color: #00C8DC;
  font-size: 40px;
  line-height: 44px;
  font-family: OswaldBold,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  white-space: normal;
  overflow: hidden;
  padding-left: 2px;
  max-height: calc(44px * 2);
  -webkit-line-clamp: 2;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

.c19 {
  color: #666666;
  font-size: 16px;
  line-height: 28px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  overflow: hidden;
  max-height: calc(28px * 3);
  -webkit-line-clamp: 3;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

.c24 {
  color: #CCCCCC;
  font-size: 14px;
  line-height: 16px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c17 {
  font-weight: bold;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  max-height: -webkit-fit-content;
  max-height: -moz-fit-content;
  max-height: fit-content;
  padding-top: 0;
  text-transform: none;
  line-height: 58px;
  font-size: 75px;
}

.c10 {
  background-color: #00C8DC;
  color: #FFFFFF;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 24px;
  padding-right: 24px;
  margin-left: 0;
  margin-right: 9px;
  box-sizing: content-box;
  height: 28px;
  overflow: auto;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  overflow: hidden;
  height: 30px;
}

.c8 {
  display: inline-block;
  position: relative;
  margin-right: 8px;
  max-width: 100%;
}

.c11 {
  display: inline-block;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c29 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  max-width: 100%;
}

.c29 img {
  height: 100%;
  object-fit: cover;
}

.c35 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  max-width: 100%;
}

.c35 img {
  height: 32px;
  object-fit: contain;
}

.c6 {
  position: absolute;
  left: 0;
  top: -14px;
  max-width: 100%;
  z-index: 1;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  color: #000000;
  border: 1px solid #E5E5E5;
  background-color: #FFFFFF;
  border-radius: 8px;
  height: 100%;
  width: 100%;
}

.c34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  padding: 8px;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.07),0 2px 1px -1px rgba(0,0,0,0.06),0 1px 3px 0 rgba(0,0,0,0.10);
  color: #000000;
  background-color: #FFFFFF;
  border-bottom-width: 0px;
  border-top-width: 0px;
  border-right-width: 0px;
  border-left-width: 0px;
  border-radius: 4px;
  text-align: center;
  height: 100%;
  width: 100%;
}

.c36 img {
  display: block;
  max-width: 128px !important;
}

.c31 {
  display: none;
}

.c32 {
  margin-left: 8px;
}

.c3 {
  position: relative;
  outline: none;
  width: 100%;
  height: 100%;
}

.c3 .c5 {
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
}

.c33 {
  position: relative;
  outline: none;
  width: 100%;
}

.c33 .c5 {
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
}

.c23 {
  color: #666666;
  border-color: #E5E5E5;
  border-width: 1px;
  border-radius: 25px;
  border-style: solid;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  margin-right: 16px;
  margin-bottom: 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  color: #999999;
  opacity: 1.0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  position: relative;
  padding: 16px;
}

.c0::after {
  content: '';
  position: absolute;
  display: block;
  bottom: -2px;
  height: 1px;
  left: 0;
  width: calc(100%);
  background-color: #999999;
  -webkit-transform-origin: right center;
  -ms-transform-origin: right center;
  transform-origin: right center;
  -webkit-transform: scale(0,1);
  -ms-transform: scale(0,1);
  transform: scale(0,1);
  -webkit-transition: -webkit-transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
  -webkit-transition: transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
  transition: transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
}

.c0:hover::after {
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  -webkit-transform: translateY(0px);
  -ms-transform: translateY(0px);
  transform: translateY(0px);
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c2 .c30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  z-index: 1;
  right: 0;
  top: -24px;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c2 .c30 > div {
  display: none;
}

.c2 .c30 > div:first-child {
  display: block;
}

.c1 {
  width: 100%;
  height: 100%;
}

.c4 {
  width: 100%;
  height: 100%;
  outline: none;
}

.c13 {
  cursor: initial;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-transform: translateY(0px);
  -ms-transform: translateY(0px);
  transform: translateY(0px);
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  padding: 8px 16px;
}

.c15 {
  text-align: left;
}

.c18 {
  margin: 8px 0 0 0;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  width: 100%;
  min-height: 256px;
}

.c28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 2;
}

.c28 img {
  object-fit: contain;
  max-height: 250px;
}

.c27 {
  position: absolute;
  width: calc(100% + 16px);
  right: 16px;
  height: 100%;
  -webkit-transform: skew(-10.3deg);
  -ms-transform: skew(-10.3deg);
  transform: skew(-10.3deg);
}

.c27::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 100%;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  background-image: url('public/images/small.jpg');
}

.c27::before {
  content: '';
  position: absolute;
  width: 100%;
  height: 100%;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  background-image: url('public/images/small.jpg?q=1');
  background-color: #00C8DC;
}

.c26 {
  overflow: hidden;
  position: absolute;
  right: -16px;
  width: 100%;
  border-bottom-left-radius: 28.8px;
  border-top-left-radius: 5.76px;
  margin-top: 64px;
  height: 144px;
  -webkit-transform: skew(10.3deg);
  -ms-transform: skew(10.3deg);
  transform: skew(10.3deg);
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: auto;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c21 {
  max-height: calc((32px - 1px) * 2);
  overflow: hidden;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 16px;
}

.c21 .c22 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c17 {
    max-height: 100%;
  }
}

@media (min-width:752px) {
  .c17 {
    font-size: 40px;
    line-height: 70px;
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c29 {
    max-width: 100%;
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c29 img {
    max-width: 100%;
    width: auto;
    height: auto;
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c35 {
    max-width: auto;
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c35 img {
    max-width: 100%;
    width: auto;
    height: auto;
  }
}

@media (max-width:752px) {
  .c6 > div > div:nth-child(n + 3) {
    display: none;
  }
}

@media (min-width:512px) {
  .c31 {
    position: absolute;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    z-index: 1;
    right: 0;
    top: -24px;
    -webkit-box-pack: end;
    -webkit-justify-content: flex-end;
    -ms-flex-pack: end;
    justify-content: flex-end;
  }
}

@media (min-width:512px) {
  .c3:hover .c5,
  .c3:hover .c30 {
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
  }
}

@media (min-width:512px) {
  .c33:hover .c5,
  .c33:hover .c30 {
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
  }
}

@media (min-width:512px) {
  .c2 .c30 > div {
    display: block;
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c2 .c30 img {
    width: 100%;
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .bIJQEU .c30 img {
    width: 100%;
  }
}

@media (min-width:752px) {
  .c13 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:752px) {
  .c14 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

@media (min-width:752px) {
  .c14 {
    padding: 32px 24px;
  }
}

@media (min-width:752px) {
  .c15 {
    width: 100%;
    position: relative;
    z-index: 2;
  }
}

@media (min-width:752px) {
  .c18 {
    margin: 16px 0 0 0;
  }
}

@media (min-width:752px) {
  .c25 {
    -webkit-flex: 2;
    -ms-flex: 2;
    flex: 2;
  }
}

@media (min-width:752px) {
  .c25 {
    min-height: 352px;
  }
}

@media (max-width:752px) {
  .c28 {
    padding: 8px;
  }
}

@media (min-width:752px) {
  .c28 {
    margin: 24px;
    margin-left: 40px;
  }
}

@media (min-width:752px) {
  .c28 img {
    max-height: 300px;
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {

}

@media (min-width:752px) {
  .c21 {
    margin-top: 32px;
  }
}

<a
  className="c0 c1"
  color="grey4"
  target="_self"
>
  <div
    className="c2"
  >
    <div
      className="c3 c4"
    >
      <div
        className="c5 c6"
      >
        <div
          className="c7"
        >
          <div
            className="c8"
          >
            <span
              className="c9 c10"
              fontSize="xxs"
            >
              <div
                className="c11"
              >
                Featured
              </div>
            </span>
          </div>
          <div
            className="c8"
          >
            <span
              className="c9 c10"
              fontSize="xxs"
            >
              <div
                className="c11"
              >
                Sponsored
              </div>
            </span>
          </div>
        </div>
      </div>
      <div
        className="c12"
        display="flex"
        elevation={0}
        overflow="hidden"
        shape="rounded-big"
      >
        <div
          className="c13"
        >
          <div
            className="c14"
          >
            <div
              className="c15"
            >
              <p
                className="c16 c17"
                color="primary"
                fontFamily="featured"
                fontSize="xxxxl"
                spacing="base"
              >
                High standards require sensible processes
              </p>
              <div
                className="c18"
              >
                <span
                  className="c19"
                  color="grey5"
                  fontSize="sm"
                >
                  Well, the answer is obvious: “He hasn’t died yet.” Fortunately, for us, Munger has kept on ticking.
                </span>
              </div>
              <div
                className="c20"
              >
                <div
                  className="c21"
                >
                  <div
                    className="c22 c23"
                  >
                    <span
                      className="c24"
                      color="grey3"
                      fontSize="xs"
                    >
                      73 products
                    </span>
                  </div>
                  <div
                    className="c22 c23"
                  >
                    <span
                      className="c24"
                      color="grey3"
                      fontSize="xs"
                    >
                      23hours 18minutes
                    </span>
                  </div>
                  <div
                    className="c22 c23"
                  >
                    <span
                      className="c24"
                      color="grey3"
                      fontSize="xs"
                    >
                      3% completed
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="c25"
            size="auto"
          >
            <div
              className="c26"
              height={144}
            >
              <div
                className="c27"
              />
            </div>
            <div
              className="c28"
            >
              <div
                className="c29"
                height="100%"
                width="100%"
              >
                <picture
                  style={
                    Object {
                      "height": "100%",
                      "width": "100%",
                    }
                  }
                >
                  <img
                    alt="image"
                    height="100%"
                    loading="eager"
                    src="public/images/teasers/product02.png"
                    width="100%"
                  />
                </picture>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c30 c31"
      >
        <div
          className="c32"
        >
          <div
            className="c33"
          >
            <div
              className="c34"
              display="flex"
              elevation={1}
              shape="rounded-small"
            >
              <div
                className="c35 c36"
                height="32px"
                width="auto"
              >
                <picture
                  style={
                    Object {
                      "height": "32px",
                      "width": "100%",
                    }
                  }
                >
                  <img
                    alt="image"
                    height="32px"
                    loading="eager"
                    src="public/images/featured_products/featured_product_01.png"
                    width="auto"
                  />
                </picture>
              </div>
            </div>
          </div>
        </div>
        <div
          className="c32"
        >
          <div
            className="c33"
          >
            <div
              className="c34"
              display="flex"
              elevation={1}
              shape="rounded-small"
            >
              <div
                className="c35 c36"
                height="32px"
                width="auto"
              >
                <picture
                  style={
                    Object {
                      "height": "32px",
                      "width": "100%",
                    }
                  }
                >
                  <img
                    alt="image"
                    height="32px"
                    loading="eager"
                    src="public/images/featured_products/featured_product_03.png"
                    width="auto"
                  />
                </picture>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</a>
`;

exports[`CampaignTeaser renders correctly: default CampaignTeaser with minimal configuration 1`] = `
.c9 {
  margin: 0;
  color: #00C8DC;
  font-size: 40px;
  line-height: 44px;
  font-family: OswaldBold,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  white-space: normal;
  overflow: hidden;
  padding-left: 2px;
  max-height: calc(44px * 2);
  -webkit-line-clamp: 2;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

.c10 {
  font-weight: bold;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  max-height: -webkit-fit-content;
  max-height: -moz-fit-content;
  max-height: fit-content;
  padding-top: 0;
  text-transform: none;
  line-height: 58px;
  font-size: 75px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  color: #000000;
  border: 1px solid #E5E5E5;
  background-color: #FFFFFF;
  border-radius: 8px;
  height: 100%;
  width: 100%;
}

.c3 {
  position: relative;
  outline: none;
  width: 100%;
  height: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  color: #999999;
  opacity: 1.0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  position: relative;
  padding: 16px;
}

.c0::after {
  content: '';
  position: absolute;
  display: block;
  bottom: -2px;
  height: 1px;
  left: 0;
  width: calc(100%);
  background-color: #999999;
  -webkit-transform-origin: right center;
  -ms-transform-origin: right center;
  transform-origin: right center;
  -webkit-transform: scale(0,1);
  -ms-transform: scale(0,1);
  transform: scale(0,1);
  -webkit-transition: -webkit-transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
  -webkit-transition: transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
  transition: transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
}

.c0:hover::after {
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  -webkit-transform: translateY(0px);
  -ms-transform: translateY(0px);
  transform: translateY(0px);
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  width: 100%;
  height: 100%;
}

.c4 {
  width: 100%;
  height: 100%;
  outline: none;
}

.c6 {
  cursor: initial;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-transform: translateY(0px);
  -ms-transform: translateY(0px);
  transform: translateY(0px);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  padding: 8px 16px;
}

.c8 {
  text-align: left;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  width: 100%;
  min-height: 256px;
}

.c12 {
  position: absolute;
  background-size: cover;
  background-repeat: no-repeat;
  background-image: url('');
  background-position: 50%;
  background-color: #00C8DC;
  width: 100%;
  height: 100%;
  z-index: -1;
  min-height: 256px;
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c10 {
    max-height: 100%;
  }
}

@media (min-width:752px) {
  .c10 {
    font-size: 40px;
    line-height: 70px;
  }
}

@media (min-width:512px) {

}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {

}

@media (min-width:752px) {
  .c6 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:752px) {
  .c7 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

@media (min-width:752px) {
  .c7 {
    padding: 32px 24px;
  }
}

@media (min-width:752px) {
  .c8 {
    width: 100%;
    position: relative;
    z-index: 2;
  }
}

@media (min-width:752px) {
  .c11 {
    -webkit-flex: 2;
    -ms-flex: 2;
    flex: 2;
  }
}

@media (min-width:752px) {
  .c11 {
    min-height: 352px;
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c12 {
    left: 0;
  }
}

<a
  className="c0 c1"
  color="grey4"
  target="_self"
>
  <div
    className="c2"
  >
    <div
      className="c3 c4"
    >
      <div
        className="c5"
        display="flex"
        elevation={0}
        overflow="hidden"
        shape="rounded-big"
      >
        <div
          className="c6"
        >
          <div
            className="c7"
          >
            <div
              className="c8"
            >
              <p
                className="c9 c10"
                color="primary"
                fontFamily="featured"
                fontSize="xxxxl"
                spacing="base"
              >
                High standards require sensible processes
              </p>
            </div>
          </div>
          <div
            className="c11"
            size="auto"
          >
            <div
              className="c12"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</a>
`;
